minor change to 'Python projects' wording

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<h3>Python</h3>
 							<p>A versatile coding language. Experienced in Data Cleaning, Data Extraction, and currently pursuing Machine Learning.</p>
 							<ul class="actions special">
-								<li><a href="https://drive.google.com/drive/folders/1xV-Kq9wsO8rXycPkN6y-aHKiSP0a2Rf9?usp=sharing" target="_blank" class="button">Personal Project</a></li>
+								<li><a href="https://drive.google.com/drive/folders/1xV-Kq9wsO8rXycPkN6y-aHKiSP0a2Rf9?usp=sharing" target="_blank" class="button">Personal Projects</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
