corrected a link on 'Excel projects'
how did I forget that

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					<p>Some of my work, through Google Drive or hosted on the platform's own website</p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"> <a href="https://drive.google.com/drive/folders/1NkCCYqwCHPS1yqRMir_yQtsDb4jSOQjs?usp=sharing" target="_blank"> <img src="images/excellogo368square.png" alt="The modern Excel logo" /> </a> </span>
+							<span class="image fit"> <a href="portfolio_excelwork.pdf" target="_blank"> <img src="images/excellogo368square.png" alt="The modern Excel logo" /> </a> </span>
 							<h3>Excel</h3>
 							<p>The common spreadsheet software. Confident in Formulas, Data Cleaning, Power Query, Visualisations, and general analysis.</p>
 							<ul class="actions special">
